# love_project

./: mock.py  pyproject.toml
src/application/common/: command.py  dto.py  event.py  exceptions.py  query.py
src/application/common/interfaces/: uow.py
src/application/common/pagination/: dto.py
src/application/photo/: __init__.py
src/application/photo/commands/: add_puzzle.py  create_photo.py  photo_add_collage.py
src/application/photo/dto/: __init__.py  deleted_photo.py  photo.py  photos.py
src/application/photo/interfaces/: __init__.py
src/application/photo/interfaces/persistence/: __init__.py  collage_repo.py  file_storage.py  photo_repo.py  reader.py
src/domain/common/: constants.py
src/domain/common/entities/: __init__.py  aggregate_root.py  deletable_mixin.py  enitity.py
src/domain/common/events/: __init__.py  event.py
src/domain/common/exceptions/: __init__.py  base.py  value_objects_exceptions.py
src/domain/common/value_objets/: __init__.py  base.py  deleted_status.py
src/domain/mirror/category/: exceptions.py
src/domain/mirror/category/events/: category_created.py  category_deleted.py  category_updated.py
src/domain/mirror/category/value_objects/: category_id.py  (+2 more)
src/domain/mirror/compliment/: exceptions.py
src/domain/mirror/photo/: exceptions.py
src/domain/mirror_core/event/: exceptions.py
src/domain/mirror_core/music/: exceptions.py
src/domain/mirror_core/photo/: exceptions.py
src/domain/mirror_core/place/: exceptions.py
src/domain/mirror_support/collage/: exceptions.py
src/infrastructure/db/: local_file_storage.py
(+72 files in other folders)
