[tool.poetry]
name = "love_project"
version = "1.0.0"
description = "Love project example"
authors = [
    "NikolayDubovoy <nikolaydubovoy@gmail.com>",
]
maintainers = [
    "NikolayDubovoy <nikolaydubovoy@gmail.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.3"
sqlalchemy = "^2.0.38"
didiator = "^0.3.1"
uuid6 = "^2024.7.10"
asyncio = "^3.4.3"
aiohttp = "^3.11.13"
aiofiles = "^24.1.0"
